fix spacing on mobile and logic in applying background color for desktop screen sizes

--- a/src/App.scss
+++ b/src/App.scss
@@ -37,12 +37,12 @@
   }
 
   @include desktop-medium {
-    padding-left: 8rem;
-    padding-right: 8rem;
+    padding-left: 16rem;
+    padding-right: 16rem;
   }
 
   @include desktop-large {
-    padding-left: 10rem;
-    padding-right: 10rem;
+    padding-left: 20rem;
+    padding-right: 20rem;
   }
 }
